# my-take-on

./: README.md
maths/: differential-analysis-with-python.md  linear-algebra-with-python.md
maths/linear-algebra-with-python/: chapter01.ipynb  chapter02.ipynb  main.py  pyproject.toml
python/testdome/: README.md  boat_movements.py  main.py  malware_analysis.py  mega_store.py  pyproject.toml
python/testdome/tests/: test_boat_movements.py  test_malware_analysis.py  test_mega_store.py
